--- a/css/base.css
+++ b/css/base.css
@@ -1,49 +1,105 @@
 :root {
   --lightgray: #e0e0e0;
-  --gray: #C0C0C0;
+  --gray: #c0c0c0;
   --darkgray: #333;
-  --navy: #17050F;
-  --blue: #082840;
   --white: #fff;
-  --duck: #AECDD2;
+  --black: #000;
 }
-  header{
-    display: inline-flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: var(--duck);
-  }
-  header {
-    border-bottom: 1px dashed var(--lightgray);
-  }
-  header:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  .logo{
-    height: auto;
-    display: inline-block;
+header {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: var(--black);
+}
+header {
+  border-bottom: 1px dashed var(--lightgray);
+}
+header:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.logo {
+  height: auto;
+  display: inline-block;
+  display: flex;
+  flex-grow: 1;
+  outline: none;
+  color: var(--white);
+  margin-left: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-size: 1.5em;
+  letter-spacing: 1.2px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.nav {
+  list-style: none;
+  display: flex;
+}
+.nav-item {
+  display: inline-block;
+  margin-right: 1em;
+}
+.nav-item a[href]:not(:hover) {
+  text-decoration: none;
+}
+.nav-item-active {
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.hidden {
+  display: none;
+}
+
+footer {
+  background-color: var(--black);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+footer ul {
+  font-size: 1.3em;
+  outline: none;
+  margin-right: 40px;
+  color: var(--white);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1em;
+  letter-spacing: 1.2px;
+  font-weight: 600;
+}
+footer ul a {
+  margin-bottom: 20px;
+  text-decoration: none;
+  list-style: none;
+  color: var(--white);
+}
+footer ul li {
+  margin-top: 10px;
+  color: var(--white);
+  cursor: pointer;
+  list-style: none;
+  font-size: 0.9em;
+}
+.footer {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 915px) {
+  .logo {
     display: flex;
-    flex-grow: 1;
-    outline: none;
-    color: var(--white);
-    margin-left: 20px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: 1.5em;
-    letter-spacing: 1.2px;
-    font-weight: 600;
-    cursor: pointer;
-  };
-  .nav {
-    list-style: none;
-    display: flex;
+    font-size: 1em;
   }
   .nav-item {
-    display: inline-block;
-    margin-right: 1em;
+    font-size: 0.75em;
   }
   .nav-item a[href]:not(:hover) {
     text-decoration: none;
@@ -52,90 +108,30 @@
     font-weight: 700;
     text-decoration: underline;
   }
-
-  .hidden{
+}
+@media screen and (max-width: 500px) {
+  .logo {
+    font-size: 1.8em;
+  }
+  .hideMe {
     display: none;
   }
-  
-  footer{
-    background-color: var(--duck);
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
+  .nav div ul li {
+    margin: 30px 5px 0px 5px;
   }
-  footer ul{
-    font-size: 1.3em;
-    outline: none;
-    margin-right: 40px;
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1em;
-    letter-spacing: 1.2px;
-    font-weight: 600;
+  .nav div ul li:first-child {
+    margin-left: 2px;
   }
-  footer ul a{
-    margin-bottom: 20px;
-    text-decoration: none;
-    list-style: none;
-    color: white;
+  .nav div ul li:last-child {
+    margin-right: 2px;
   }
-  footer ul li {
-    margin-top: 10px;
-    color: white;
-    cursor: pointer;
-    list-style: none;
-    font-size: 0.9em;
+  #navLinks {
+    font-size: 0.2em;
   }
-  .footer{
-    text-decoration: none;
-  }
+}
 
-  @media screen and (max-width: 915px){
-    .logo{
-      display: flex;
-      font-size: 1em;
-    }
-    .nav-item {
-     font-size: 0.75em;
-    }
-    .nav-item a[href]:not(:hover) {
-      text-decoration: none;
-    }
-    .nav-item-active {
-      font-weight: 700;
-      text-decoration: underline;
-    }
-   
-  };
-  @media screen and (max-width: 500px){
-    .logo{
-      font-size: 1.8em;
-    }
-    .hideMe{
-      display: none;
-    }
-    .nav div ul li{
-      margin: 30px 5px 0px 5px;
-    }
-    .nav div ul li:first-child{
-      margin-left: 2px;
-    }
-    .nav div ul li:last-child{
-      margin-right: 2px;
-    }
-    #navLinks{
-      font-size: 0.2em;
-    }
-  };
-
-  @media screen and (max-width: 375px){
-    .logo{
-      font-size: 1.5em;
-    }
-  }; 
-
+@media screen and (max-width: 375px) {
+  .logo {
+    font-size: 1.5em;
+  }
+} ;
